2004-08-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Optional): Update documentation for
	AC_CANONICAL_BUILD, AC_CANONICAL_HOST, and AC_CANONICAL_SYSTEM.

	* automake.in (AC_CANONICAL_HOST, AC_CANONICAL_SYSTEM): Replace by ...
	(AC_CANONICAL_BUILD, AC_CANONICAL_HOST, AC_CANONICAL_SYSTEM): ... these.
	(scan_autoconf_traces): Scan for the latter three macros instead of
	the former two.
	(make_paragraphs): Adjust definitions of %BUILD%, %HOST%, and %TARGET%.
	* tests/hosts.test: New file.
	* tests/Makefile.am (TESTS): Add hosts.test.
	Report and test case from Norman Gray.

2004-08-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (scan_file): Update "#Extending%20aclocal" URL, makeinfo
	4.7 now outputs "#Extending-aclocal".

2004-07-28  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.9.0a.

	* configure.ac, NEWS: Bump version to 1.9.

	* automake.in (generate_makefile): Update misleading comment about
	libtool scripts.

	* lib/texinfo.tex: New upstream version.

2004-07-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): Remove `.' from the mkdir_p
	definition, it causes `make install' to fails for user with no
	right to write in the source-tree.
	* automake.in (handle_configure): Do not use mkdir_p in the
	definition for $(mkdir_p).
	Report from Harlan Stenn.

	* lib/am/texi-vers.am (%STAMPVTI%): Typo in comment.

2004-07-22  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Libtool Modules): Typo in example.
	Report from Ulrich Eckhardt.

2004-07-21  Andreas Schwab  <schwab@suse.de>  (tiny change)

	* automake.in (check_directory): Quote $dir in regexp.

2004-07-17  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.8e.

	* configure.ac, NEWS: Bump version to 1.8d.

	* lib/config-ml.in, lib/config.sub, lib/config.guess, lib/texinfo.tex:
	New upstream versions.

	* lib/am/texibuild.am (?GENERIC?%SOURCE_SUFFIX%.html,