@@ -5310,22 +5310,15 @@ sub lang_lex_target_hook
 # This is a helper for both lex and yacc.
 sub yacc_lex_finish_helper
 {
-    return if defined $language_scratch{'lex-yacc-done'};
-    $language_scratch{'lex-yacc-done'} = 1;
+  return if defined $language_scratch{'lex-yacc-done'};
+  $language_scratch{'lex-yacc-done'} = 1;
 
-    # If there is more than one distinct yacc (resp lex) source file
-    # in a given directory, then the `ylwrap' program is required to
-    # allow parallel builds to work correctly.  FIXME: for now, no
-    # line number.
-    require_conf_file ($configure_ac, FOREIGN, 'ylwrap');
-    if ($config_aux_dir_set_in_configure_ac)
-    {
-	&define_variable ('YLWRAP', "$am_config_aux_dir/ylwrap", INTERNAL);
-    }
-    else
-    {
-	&define_variable ('YLWRAP', '$(top_srcdir)/ylwrap', INTERNAL);
-    }
+  # If there is more than one distinct yacc (resp lex) source file
+  # in a given directory, then the `ylwrap' program is required to
+  # allow parallel builds to work correctly.  FIXME: for now, no
+  # line number.
+  require_conf_file ($configure_ac, FOREIGN, 'ylwrap');
+  &define_variable ('YLWRAP', "$am_config_aux_dir/ylwrap", INTERNAL);
 }
 
 sub lang_yacc_finish
