@@ -3777,11 +3777,11 @@ one distinct @code{yacc} (or @code{lex}) source file in a directory,
 Automake uses a small program called @code{ylwrap} to run @code{yacc}
 (or @code{lex}) in a subdirectory.  This is necessary because yacc's
 output filename is fixed, and a parallel make could conceivably invoke
-more than one instance of @code{yacc} simultaneously.  The @code{ylwrap}
-program is distributed with Automake.  It should appear in the directory
-specified by @samp{AC_CONFIG_AUX_DIR} (@pxref{Input, , Finding
-`configure' Input, autoconf, The Autoconf Manual}), or the current
-directory if that macro is not used in @file{configure.ac}.
+more than one instance of @code{yacc} simultaneously.  The
+@code{ylwrap} program is distributed with Automake.  It should appear
+in the directory specified by @samp{AC_CONFIG_AUX_DIR}, or one of its
+default locations (@pxref{Input, , Finding `configure' Input,
+autoconf, The Autoconf Manual}).
 
 For @code{yacc}, simply managing locking is insufficient.  The output of
 @code{yacc} always uses the same symbol names internally, so it isn't
