@@ -1,4 +1,4 @@
-@set UPDATED 28 July 2004
-@set UPDATED-MONTH July 2004
+@set UPDATED 3 August 2004
+@set UPDATED-MONTH August 2004
 @set EDITION 1.9.0a
 @set VERSION 1.9.0a
