@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2002, 2003  Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003, 2004  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -20,7 +20,7 @@
 
 # Check subpackage handling.
 
-required=gcc
+required='gcc bison'
 . ./defs || exit 1
 
 set -e
@@ -73,22 +73,36 @@ cat >lib/configure.ac <<'EOF'
 AC_INIT([lib], [2.3])
 AM_INIT_AUTOMAKE
 AC_PROG_RANLIB
+AC_PROG_YACC
 AC_CONFIG_FILES([Makefile])
 FOO
 EOF
 
 cat >lib/Makefile.am <<'EOF'
 noinst_LIBRARIES = liblib.a
-liblib_a_SOURCES = src/x.c
+liblib_a_SOURCES = src/x.c foo.y
+EXTRA_liblib_a_SOURCES = bar.y
 
 dist-hook:
 	test ! -f $(distdir)/LDADD.c
 	test -f $(top_distdir)/LDADD.c
 	test -f $(distdir)/src/x.c
 	test ! -f $(top_distdir)/src/x.c
+	test -f $(YLWRAP)
 
 ACLOCAL_AMFLAGS = -I ../m4
 EOF
+
+cat > lib/foo.y << 'END'
+%{
+int yylex () {return 0;}
+void yyerror (char *s) {}
+%}
+%%
+foobar : 'f' 'o' 'o' 'b' 'a' 'r' {};
+END
+
+cp lib/foo.y lib/bar.y
 
 cat >lib/src/x.c <<'EOF'
 int lib ()
@@ -105,7 +119,7 @@ cd lib
 $ACLOCAL -I ../m4
 $FGREP 'm4_include([../m4/foo.m4])' aclocal.m4
 $AUTOCONF
-$AUTOMAKE -Wno-override
+$AUTOMAKE -Wno-override --add-missing
 cd ..
 
 ./configure
