@@ -1,3 +1,14 @@
+2004-08-03  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (yacc_lex_finish_helper): Fix definition of YLWRAP
+	when ylwrap is installed in a default aux dir found in a parent
+	package.
+	* tests/subpkg.test: Augment to check that YLWRAP is installed
+	properly.
+	* doc/automake.texi (Yacc and Lex): ylwrap is not sought is the
+	current directory.
+	Report from Norman Gray.
+
 2004-08-02  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* doc/automake.texi (Optional): Update documentation for
